// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Column checkGrammar=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkGrammar=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkHighlight=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkHighlight=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkSpaces=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column checkSpaces=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column className="my-classname" 1`] = `
<div
  className="uu5-bricks-column my-classname uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth="xs-6 s-6 m-4 l-3 xl-3" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth="xs6 s6 m4 l3 xl3" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column colWidth={"xs":6,"s":6,"m":4,"l":3,"xl":3} 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs6 uu5-col-s6 uu5-col-m4 uu5-col-l3 uu5-col-xl3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Column content=12345 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Column controlled=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column controlled=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column default props 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column disabled=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column disabled=true 1`] = `
<div
  className="uu5-bricks-column uu5-common-disabled uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Column dynamic=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column dynamic=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Footer
    content={
      <div>
        Footer of section
      </div>
    }
    id="uuID-footer"
    key="uuID-footer"
  />
</div>
`;

exports[`UU5.Bricks.Column header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Header
    content={
      <div>
        Header of section
      </div>
    }
    id="uuID-header"
    key="uuID-header"
    underline={false}
  />
</div>
`;

exports[`UU5.Bricks.Column hidden=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column hidden=true 1`] = `
<div
  className="uu5-bricks-column uu5-common-hidden uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column id="myId" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column is wrapped in UU5.Bricks.Row Bootsrap grid 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    id="uuID02"
    key="uuID02"
    style="backgroundColor: yellow"
  >
    <P
      id="uuID03"
    >
      xs12 s3
    </P>
  </Column>
  <Column
    colWidth="xs12 s3"
    id="uuID04"
    key="uuID04"
    style="backgroundColor: orange"
  >
    <P
      id="uuID05"
    >
      xs12 s3
    </P>
  </Column>
  <Column
    colWidth="xs12 s3"
    id="uuID06"
    key="uuID06"
    style="backgroundColor: red"
  >
    <P
      id="uuID07"
    >
       xs12 s3
    </P>
  </Column>
  <Column
    colWidth="xs12 s3"
    id="uuID08"
    key="uuID08"
    style="backgroundColor: pink"
  >
    <P
      id="uuID09"
    >
      xs12 s3
    </P>
  </Column>
</div>
`;

exports[`UU5.Bricks.Column is wrapped in UU5.Bricks.Row column is set with width 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Column
    id="uuID02"
    key="uuID02"
    style="backgroundColor: yellow"
    width="20%"
  >
    <P
      id="uuID03"
    >
      20% Column
    </P>
  </Column>
  <Column
    id="uuID04"
    key="uuID04"
    style="backgroundColor: orange"
    width="200px"
  >
    <P
      id="uuID05"
    >
      100px Column
    </P>
  </Column>
  <Column
    id="uuID06"
    key="uuID06"
    style="backgroundColor: red"
    width="10em"
  >
    <P
      id="uuID07"
    >
      10em Column
    </P>
  </Column>
  <Column
    id="uuID08"
    key="uuID08"
    style="backgroundColor: pink"
    width="10cm"
  >
    <P
      id="uuID09"
    >
      10cm Column
    </P>
  </Column>
</div>
`;

exports[`UU5.Bricks.Column level="0" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level="1" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level="2" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level="3" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level="4" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level="5" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level="6" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level=0 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level=1 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level=2 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level=3 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level=4 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level=5 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column level=6 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column name="myName" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Column nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Column nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noIndex=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noIndex=true 1`] = `
<div
  className="uu5-bricks-column uu5-noindex uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noSpacing=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column noSpacing=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-nospacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column pureRender=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column pureRender=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column selected=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column selected=true 1`] = `
<div
  className="uu5-bricks-column uu5-common-selected uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column textCorrector=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column textCorrector=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.Column underline=false 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column underline=true 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Column width="10em" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "10em",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width="30%" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "30%",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width="200px" 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": "200px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Column width=200 1`] = `
<div
  className="uu5-bricks-column uu5-bricks-column-spacing"
  id="uuID"
  style={
    Object {
      "width": 200,
    }
  }
  title={null}
/>
`;
